Ingress/sample-app/k8s-deploy-alb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-app
  labels:
    app: alb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alb-app
  template:
    metadata:
      name: alb-app
      labels:
        app: alb-app
    spec:
      containers:
        - name: alb-app
          image: eggboy/echo-app:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
