Ingress/sample-app/k8s-deploy-external.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-app
  labels:
    app: external-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-app
  template:
    metadata:
      name: external-app
      labels:
        app: external-app
    spec:
      containers:
        - name: external-app
          image: eggboy/echo-app:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
