Ingress/sample-app/k8s-svc-agic.yml
apiVersion: v1
kind: Service
metadata:
  name: agic-app
spec:
  selector:
    app: agic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
