Ingress/sample-app/k8s-svc-alb.yml
apiVersion: v1
kind: Service
metadata:
  name: alb-app
spec:
  selector:
    app: alb-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
