Ingress/sample-app/k8s-svc-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-app
spec:
  selector:
    app: internal-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
