Ingress/sample-app/k8s-agic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-ingress
#  annotations:
spec:
  ingressClassName: azure-application-gateway
  tls:
    - hosts:
        - external-agic.jaylee.cloud
      secretName: keyvault-external-app
  rules:
    - host: external-agic.jaylee.cloud
      http:
        paths:
          - backend:
              service:
                name: agic-app
                port:
                  number: 80
            path: /
            pathType: Prefix
