Ingress/sample-app/k8s-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    alb.networking.azure.io/alb-name: alb-external
    alb.networking.azure.io/alb-namespace: azure-alb-system
spec:
  ingressClassName: azure-alb-external
  tls:
    - hosts:
        - external-alb.jaylee.cloud
      secretName: keyvault-external-app
  rules:
    - host: external-alb.jaylee.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alb-app
                port:
                  number: 80
