Ingress/sample-app/k8s-svc-external-subdomain2.yml
apiVersion: v1
kind: Service
metadata:
  name: external-app2
spec:
  selector:
    app: external-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-jay-eastus.vault.azure.net/certificates/aks-ingress-jaylee-cloud-cert
  name: external-app2
spec:
  ingressClassName: nginx-internal
  rules:
    - host: external-subdomain2.jaylee.cloud
      http:
        paths:
          - backend:
              service:
                name: external-app2
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - external-subdomain2.jaylee.cloud
      secretName: keyvault-external-app2
